# Terminal-Stock-Exchange

./: .antigravityrules  .gitignore  ARCHITECTURE.md  CLASS_DIAGRAM.md  CMakeLists.txt  DATA_FLOW.md  DEVELOPMENT.md  README.md
data/: .gitkeep  accounts.txt  market_data.txt  trade_logs.txt
src/: main.cpp
src/accounts/: Account.hpp  AdminAccount.cpp  AdminAccount.hpp  PlayerTrader.cpp  PlayerTrader.hpp
src/assets/: Crypto.cpp  Crypto.hpp  ETF.cpp  ETF.hpp  FinancialAsset.hpp  Stock.cpp  Stock.hpp
src/engine/: MarketEngine.cpp  MarketEngine.hpp
src/io/: FileManager.cpp  FileManager.hpp
src/types/: Types.hpp
src/ui/: Menu.cpp  Menu.hpp  Terminal.cpp  Terminal.hpp
